--- a/templates/inventory/accordion.html
+++ b/templates/inventory/accordion.html
@@ -5,7 +5,7 @@
     <div class="collapse" id="inventoryAccordion">
         <ul class="nav flex-column ms-3">
             <li class="nav-item">
-                <a class="nav-link d-flex align-items-center text-black" href="{% url 'inventory:category_view' %}">
+                <a class="nav-link d-flex align-items-center text-black" href="{% url 'inventory:product_category_view' %}">
                     <i class="fas fa-tags me-2"></i> Categorie prodotti
                 </a>
             </li>
@@ -15,12 +15,12 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link d-flex align-items-center text-black" href="{% url 'inventory:sale_view' %}">
+                <a class="nav-link d-flex align-items-center text-black" href="{% url 'inventory:sale_list' %}">
                     <i class="fas fa-shopping-cart me-2"></i> Vendite
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link d-flex align-items-center text-black" href="{% url 'inventory:order_view' %}">
+                <a class="nav-link d-flex align-items-center text-black" href="{% url 'inventory:order_list' %}">
                     <i class="fas fa-truck-loading me-2"></i> Ordini
                 </a>
             </li>
