--- a/templates/inventory/product.html
+++ b/templates/inventory/product.html
@@ -6,6 +6,11 @@
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center">
         <h2 class="h4">Prodotti</h2>
+
+        <a href="{% url 'inventory:download_stock_data' %}" class="btn bg-dark text-white me-2">
+            Scarica CSV
+        </a>
+
         <button class="btn bg-dark text-white" type="button" data-bs-toggle="collapse" data-bs-target="#createProductForm" aria-expanded="false" aria-controls="createProductForm">
             Aggiungi Prodotto
         </button>
