created report selection system

--- a/templates/inventory/reports/select_report.html
+++ b/templates/inventory/reports/select_report.html
@@ -65,7 +65,7 @@
                     </div>
                     <div>
                         <h5 class="card-title">Sales Report</h5>
-                        <p class="card-text">Analizza le vendite con i dati più recenti.</p>
+                        <p class="card-text">Analizza le vendite.</p>
                         <a href="{% url 'inventory:sales_report' %}" class="btn btn-outline-dark mt-auto">
                             Seleziona Opzioni
                         </a>
